tests/negative/semantic/structure_recursive_field/input.ci
structure A {
    A inner = clone A;
}

void main() {}
